# Me-nMa

./: Cargo.toml
src/: gui.rs  main.rs  memo.rs  tui.rs
src/gui/easy_mark/: easy_mark_viewer.rs
src/tui/UserInterface/: app.rs  ui.rs
src/tui/user_interface/: app.rs  ui.rs
