[package]
name = "MenMa"
version = "0.1.0"
authors = ["ryota-kita <ryota-kita@kke.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt   = "*"
regex       = "*"
itertools = "*"
winrt = "0.7.2"
encoding_rs = "*"
chrono = "*"
anyhow = "*"