[package]
name = "menma"
version = "0.1.1"
authors = ["ryota-kita <ryota-kita@kke.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt   = "*"
regex       = "*"
itertools = "*"
winrt = "0.7.2"
encoding_rs = "*"
chrono = "*"
anyhow = "*"
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
argh = "0.1.0"
rand = "0.8"
once_cell = "1.8.0"
fs_extra = "1.2.0"
eframe = "0.16.0"